hphp/hack/test/typecheck/is_expression/tconst3.php.exp
File "tconst3.php", line 7, characters 15-21:
The "is" operator cannot be used with a function (Typing[4195])
